--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
-    "next": "13.4.0",
+    "next": "^14.2.8",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "20",
